removing html extension

--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 				<span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
 			</button>
-			<a class="navbar-brand" href="http://jaesik.info/index.html">Jaesik Park</a>
+			<a class="navbar-brand" href="http://jaesik.info">Jaesik Park</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li class="hidden">
-					<a href="http://jaesik.info/index.html"></a>
+					<a href="http://jaesik.info"></a>
 				</li>
 				<li >
-					<a href="http://jaesik.info/about_me.html">About me</a>
+					<a href="http://jaesik.info/about_me">About me</a>
 				</li>
 				<li >
-					<a href="http://jaesik.info/academic_activities.html">Academic activities</a>
+					<a href="http://jaesik.info/academic_activities">Academic activities</a>
 				</li>
 				<li >
-					<a href="http://jaesik.info/publications.html">Publications</a>
+					<a href="http://jaesik.info/publications">Publications</a>
 				</li>
 				<li >
-					<a href="http://jaesik.info/lab.html">@POSTECH</a>
+					<a href="http://jaesik.info/lab">@POSTECH</a>
 				</li>
 				<li >
-					<a href="http://jaesik.info/contact.html">Contact</a>
+					<a href="http://jaesik.info/contact">Contact</a>
 				</li>
 			</ul>
 		</div>
@@ -83,7 +83,7 @@
 			</div>
 			<div class="col-lg-9">
 				<h1>Jaesik Park</h1>
-				<p class="lead">Hello! I am an Assistant Professor at POSTECH. I am looking for self-motivated students to make <a href="http://cvlab.postech.ac.kr" target="_blank">POSTECH computer vision lab</a> together. Please <a href="http://jaesik.info/contact.html">contact me</a> if interested.</p>
+				<p class="lead">Hello! I am an Assistant Professor at POSTECH. I am looking for self-motivated students to make <a href="http://cvlab.postech.ac.kr" target="_blank">POSTECH computer vision lab</a> together. Please <a href="http://jaesik.info/contact">contact me</a> if interested.</p>
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
