--- a/publications/lightcalib/header.html
+++ b/publications/lightcalib/header.html
@@ -7,28 +7,28 @@
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 				<span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
 			</button>
-			<a class="navbar-brand" href="http://jaesik.info/index.html">Jaesik Park</a>
+			<a class="navbar-brand" href="http://jaesik.info">Jaesik Park</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li class="hidden">
-					<a href="http://jaesik.info/index.html"></a>
+					<a href="http://jaesik.info"></a>
 				</li>
 				<li >
-					<a href="http://jaesik.info/about_me.html">About me</a>
+					<a href="http://jaesik.info/about_me">About me</a>
 				</li>
 				<li >
-					<a href="http://jaesik.info/academic_activities.html">Academic activities</a>
+					<a href="http://jaesik.info/academic_activities">Academic activities</a>
 				</li>
 				<li class="active">
-					<a href="http://jaesik.info/publications.html">Publications</a>
+					<a href="http://jaesik.info/publications">Publications</a>
 				</li>
 				<li >
-					<a href="http://jaesik.info/lab.html">@POSTECH</a>
+					<a href="http://jaesik.info/lab">@POSTECH</a>
 				</li>
 				<li >
-					<a href="http://jaesik.info/contact.html">Contact</a>
+					<a href="http://jaesik.info/contact">Contact</a>
 				</li>
 			</ul>
 		</div>
