--- a/academic_activities.html
+++ b/academic_activities.html
@@ -106,6 +106,7 @@
 				- IEEE Computer Vision and Pattern Recognition (CVPR)<br>
 				- International Conference on Computer Vision (ICCV)<br>
 				- The European Conference on Computer Vision (ECCV)<br>
+				- Conference on Neural Information Processing Systems (NeurIPS)<br>
 				- Association for the Advancement of Artificial Intelligence (AAAI)<br>
 				- International Joint Conference on Artificial Intelligence and the Pacific Rim International Conference on Artificial Intelligence (IJCAI-PRICAI)<br>
 				- International Conference on Robotics and Automation (ICRA)<br>
