--- a/publications.html
+++ b/publications.html
@@ -142,7 +142,7 @@
 		<h3>High-Dimensional Convolutional Networks for Geometric Pattern Recognition</h3>
 		<p>Christopher Choy, Junha Lee, Rene Ranftl, Jaesik Park, and Vladlen Koltun<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020<br>
-		</p>
+		(<b>Oral</b> Presentation, 5.7% acceptance rate)</p>
 		<a href="http://jaesik.info/publications/data/20_cvpr_highconv.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
