--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
+						2020.07. I will serve as an Area Chair for <b>CVPR 2021</b>.
+					</li>
+					<li class="list-group-item">
+						2020.07. We open <a href="https://humbi-data.net">humbi-data.net</a> to distribute extensive human performance capture.
+					</li>
+					<li class="list-group-item">
 						2020.03. Three papers got accepted to <b>CVPR 2020</b>.
 					</li>
 					<li class="list-group-item">
@@ -97,12 +103,6 @@
 					</li>
 					<li class="list-group-item">
 						2019.08. I will serve as an Session Chair for <b>ICCV 2019</b>.
-					</li>
-					<li class="list-group-item">
-						2019.07. I will serve as an Area Chair for <b>CVPR 2020</b>.
-					</li>
-					<li class="list-group-item">
-						2019.07. One paper regarding geometric feature learning is accepted to <b>ICCV 2019</b>.
 					</li>
 					<div id="accordion">
 						<div class="card">
@@ -115,6 +115,12 @@
 								</h5>
 							</div>
 							<div id="collapse-previous-news" class="collapse" aria-labelledby="heading-previous-news" data-parent="#accordion">
+								<li class="list-group-item">
+									2019.07. I will serve as an Area Chair for <b>CVPR 2020</b>.
+								</li>
+								<li class="list-group-item">
+									2019.07. One paper regarding geometric feature learning is accepted to <b>ICCV 2019</b>.
+								</li>
 								<li class="list-group-item">
 									2019.07. One paper on high-quality texture mapping for dynamic objects is conditionally accepted to Pacific Graphics 2019.
 								</li>
