--- a/publications.html
+++ b/publications.html
@@ -118,7 +118,7 @@
 		<p>Zhixuan Yu, Jaeshin Yoon, Inkyu Lee, Prashanth Venkatesh, Jaesik Park, Jihun Yu, and Hyunsoo Park<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020<br>
 		</p>
-		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
+		<a href="https://humbi-data.net" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 		<a href="http://jaesik.info/publications/data/20_cvpr_humbi.pdf" target="_blank" class="btn btn-default" role="button">
