--- a/lab.html
+++ b/lab.html
@@ -185,7 +185,7 @@
 				<h4>2020.03-2020.10, ETRI, Republic of Korea</h4>
 				- Developing 3D human capturing system<br>
 				<h4>2020.03-2023.03, Ministry of Science and ICT, Republic of Korea</h4>
-				- 과학기술정보통신부 신진연구자 지원사업<br>
+				- 과학기술정보통신부 신진연구자 지원사업 + 신진연구 최초혁신실험실<br>
 				<h4>2019.10-2020.10, Grant fund, Qualcomm Corp., USA</h4>
 				- Research on latent feature refinement<br>
 				<h4>2019.04-2022.04, Grant fund, POSTECH, Republic of Korea</h4>
