--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
 						2020.07. I will serve as an Area Chair for <b>CVPR 2021</b>.
 					</li>
 					<li class="list-group-item">
-						2020.07. We open <a href="https://humbi-data.net">humbi-data.net</a> to distribute extensive human performance capture.
+						2020.07. We open <a href="https://humbi-data.net">humbi-data.net</a> that is large corpus of high fidelity 3D human models.
 					</li>
 					<li class="list-group-item">
 						2020.03. Three papers got accepted to <b>CVPR 2020</b>.
