--- a/source/lab.html
+++ b/source/lab.html
@@ -75,14 +75,14 @@
 				<h3>2020 Fall</h3>
 				<h4>[CSED703F] 3D Vision</h4>
 				<h4>[CSED800/AIGS800] CSE/AIGS Graduate School Seminar</h4>
-				<h4>[AIGS101]* Artifical Intelligence Basis II</h4>
+				<h4>[AIGS101] Artifical Intelligence Basis II</h4>
 				<h3>2020 Spring</h3>
-				<h4>[CSED233] Data Structure</h4>
-				<h4>[AIGS101]* Artifical Intelligence Basis I</h4>
+				<h4>[CSED233] Data Structure*</h4> 
+				<mark>*Awarded as the best online teaching case by POSTECH</mark>
+				<h4>[AIGS101] Artifical Intelligence Basis I</h4>
 				<h4>[AIGS537/CSED537]* Artificial Intelligence & Data Science</h4>
 				<h3>2019 Fall</h3>
 				<h4>[CSED703F-01] 3D Vision</h4>
-				*Participating part of the lecture series
 			</li>
 		</ul>
 	</div>
