--- a/source/lab.html
+++ b/source/lab.html
@@ -57,7 +57,7 @@
 			<img src="source/images/jinoh.jpg" class="img-responsive img-circle img-thumbnail">
 			<h4>Jin-Oh Cho</h4>
 			2020 Fall<br>
-			Integrated Ph.D. program<br><br>
+			Master's course<br><br>
 		</div>
 		<div class="col-xs-3 text-center">
 			<img src="source/images/seokjun.jpg" class="img-responsive img-circle img-thumbnail">
@@ -74,13 +74,13 @@
 			<li class="list-group-item">
 				<h3>2020 Fall</h3>
 				<h4>[CSED703F] 3D Vision</h4>
-				<h4>[CSED800/AIGS800] CSE/AIGS Graduate School Seminar</h4>
-				<h4>[AIGS101] Artifical Intelligence Basis II</h4>
+				<h4>[CSED800/AIGS800] CSE/GSAI Colloquium</h4>
 				<h3>2020 Spring</h3>
-				<h4>[CSED233] Data Structure*</h4> 
-				<mark>*Awarded as the best online teaching case by POSTECH</mark>
 				<h4>[AIGS101] Artifical Intelligence Basis I</h4>
-				<h4>[AIGS537/CSED537]* Artificial Intelligence & Data Science</h4>
+				<h4>[CSED233] Data Structure*</h4> 
+				<mark>*Awarded as the outstanding online class by POSTECH</mark>
+				<h4>[AIGS537/CSED537]** Artificial Intelligence & Data Science</h4>
+				**Participated part of lectures
 				<h3>2019 Fall</h3>
 				<h4>[CSED703F-01] 3D Vision</h4>
 			</li>
