--- a/lab.html
+++ b/lab.html
@@ -97,7 +97,7 @@
 				- 105% Scholarship recipient rate<br>
 				- Annual educational expenditures of USD 74,900 per student
 				<h4 class="name"> Ranked <mark>third best small university in the world, first in Asia</mark></h4>
-				- By the Times Higher Education (THE), 2019<br>
+				- By the Times Higher Education (THE), 2019 and 2020<br>
 				<h4 class="name">Ranked <mark>no. 1 in Asia among world’s most innovative universities</mark></h4>
 				- By international news agency Reuters, 2019
 			</li>
