--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,10 @@
 						2020.07. I will serve as an Area Chair for <b>CVPR 2021</b>.
 					</li>
 					<li class="list-group-item">
-						2020.07. We open <a href="https://humbi-data.net">humbi-data.net</a> that is a large corpus of high fidelity 3D human models.
+						2020.07. We open <b><a href="https://humbi-data.net">humbi-data.net</a></b> that is a large corpus of high fidelity 3D human models.
+					</li>
+					<li class="list-group-item">
+						2020.06. We are releasing <b><a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN">Pytorch-StudioGAN</a></b> that provides the implementation of representative GANs for image synthesis.
 					</li>
 					<li class="list-group-item">
 						2020.03. Three papers got accepted to <b>CVPR 2020</b>.
@@ -26,9 +29,6 @@
 					</li>
 					<li class="list-group-item">
 						2019.09. We are releasing source code of FCGF via <a href="https://github.com/chrischoy/fcgf">Github</a>.
-					</li>
-					<li class="list-group-item">
-						2019.08. I will serve as an Session Chair for <b>ICCV 2019</b>.
 					</li>
 					<div id="accordion">
 						<div class="card">
@@ -41,6 +41,9 @@
 								</h5>
 							</div>
 							<div id="collapse-previous-news" class="collapse" aria-labelledby="heading-previous-news" data-parent="#accordion">
+								<li class="list-group-item">
+									2019.08. I will serve as an Session Chair for <b>ICCV 2019</b>.
+								</li>
 								<li class="list-group-item">
 									2019.07. I will serve as an Area Chair for <b>CVPR 2020</b>.
 								</li>
