--- a/source/about_me.html
+++ b/source/about_me.html
@@ -52,6 +52,7 @@
 			</li>
 			<li class="list-group-item">
 				<h4>B.E. in Media Communication Eng. - Hanyang Univ.</h4>
+				Summa Cum Laude<br>
 				<span class="glyphicon glyphicon-map-marker"></span> Seoul, Republic of Korea <br>
 				<span class="glyphicon glyphicon-calendar"></span> March 2005 – Feb. 2009
 			</li>
