--- a/source/academic_activities.html
+++ b/source/academic_activities.html
@@ -56,19 +56,23 @@
 		<ul class="list-group">
 		<li class="list-group-item">
 			<h4><mark>Outstanding Online Class</mark></h4>
-			- Awarded to five classes among ~170 classes, POSTECH, July 2020.
+			Awarded to five classes among ~170 classes, POSTECH, July 2020.
+		</li>
+		<li class="list-group-item">
 			<h4><mark>Google Season of Docs</mark></h4>
-			- Technical support for Open3D, Google, April 2019.
-			<h4><mark>Qualcomm Innovation Award (2 times)</mark></h4>
-			- Qualcomm Korea Corp. and KAIST, March 2015 and March 2016.
-			<h4><mark>Samsung HumanTech Paper Award (Silver Prize, 2 times)</mark></h4>
-			- Samsung Electronics Corp., Feb. 2013 and Feb. 2014.
+			Technical support for Open3D, Google, April 2019.
+		</li>
+		<li class="list-group-item">
+			<h4><mark>Qualcomm Innovation Award</mark>(2 times)</h4>
+			Qualcomm Korea Corp. and KAIST, March 2015 and March 2016.
+		</li>
+		<li class="list-group-item">
+			<h4><mark>Samsung HumanTech Paper Award (Silver Prize)</mark> (2 times)</h4>
+			Samsung Electronics Corp., Feb. 2013 and Feb. 2014.
+		</li>
+		<li class="list-group-item">
 			<h4><mark>Microsoft Research Asia Fellowship</mark></h4>
-			- Microsoft Research Asia, Sep. 2011.
-			<h4><mark>Summa Cum Laude</mark></h4>
-			- Hanyang University, Feb. 2009.
-			<h4><mark>Scholarship for Special Undergraduate Students</mark></h4>
-			- The Korea Foundation for Advanced Studies (KFAS), April 2006 - March 2009.
+			Microsoft Research Asia, Sep. 2011.
 		</li>
 		<li class="list-group-item">
 			<h4>Others</h4>
@@ -80,6 +84,8 @@
 			- Best Paper Award, 25th Workshop on Image Processing and Image Understanding (IPIU2013), Feb. 2013.<br>
 			- Excellent Intern Award, Microsoft Research Asia, Dec. 2012.<br>
 			- Bronze Prize, Samsung Techwin research center conference, Feb. 2012.<br>
+			- Summa Cum Laude, Hanyang University, Feb. 2009.<br>
+			- Scholarship for Special Undergraduate Students, The Korea Foundation for Advanced Studies (KFAS), April 2006 - March 2009.<br>
 			- Full scholarship, Jeongsu Scholarship Foundation, Feb. 2006 - Aug. 2008.<br>
 			- Full scholarship, Hanyang University, Aug. 2005.<br>
 		</li>
