--- a/publications.html
+++ b/publications.html
@@ -111,6 +111,28 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/20_arxiv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Contrastive Generative Adversarial Networks</h3>
+		<p>Minguk Kang and Jaesik Park<br>
+		arXiv:2006.12681, 2020<br>
+		</p>
+		<a href="https://arxiv.org/abs/2006.12681" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/18_arxiv2.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
