--- a/source/lab.html
+++ b/source/lab.html
@@ -72,17 +72,18 @@
 		<h3 class="name"> <span class="glyphicon glyphicon-blackboard"></span> Teaching</h3>
 		<ul class="list-group">
 			<li class="list-group-item">
-				<h3>2020 Fall</h3>
-				<h4>[CSED703F] 3D Vision</h4>
-				<h4>[CSED800/AIGS800] CSE/GSAI Colloquium</h4>
-				<h3>2020 Spring</h3>
-				<h4>[AIGS101] Artifical Intelligence Basis I</h4>
-				<h4>[CSED233] Data Structure*</h4> 
-				<mark>*Awarded as the outstanding online class by POSTECH</mark>
-				<h4>[AIGS537/CSED537]** Artificial Intelligence & Data Science</h4>
-				**Participated part of lectures
-				<h3>2019 Fall</h3>
-				<h4>[CSED703F-01] 3D Vision</h4>
+				<h4>2020 Fall</h4>
+				[AIGS101] Artifical Intelligence Basis II*<br>
+				[CSED100] Introduction to Computer Science Engineering*<br>
+				[CSED703F] 3D Vision<br>
+				[CSED800/AIGS800] CSE/GSAI Colloquium**<br>
+				<h4>2020 Spring</h4>
+				[AIGS101] Artifical Intelligence Basis I*<br>
+				[CSED233] Data Structure - <mark>Awarded as the outstanding online class by POSTECH</mark><br>
+				[AIGS537/CSED537] Artificial Intelligence & Data Science*<br>
+				<h4>2019 Fall</h4>
+				[CSED703F-01] 3D Vision<br>
+				Note: *Participated part of lectures, **Organized and managed lectures<br>
 			</li>
 		</ul>
 	</div>
