--- a/source/lab.html
+++ b/source/lab.html
@@ -1,7 +1,7 @@
 <!-- Source -->
 <div class="container">
 	<div class="col-sm-6">
-		<h3 class="name"> <span class="glyphicon glyphicon-flag"></span> About University</h3>
+		<h3 class="name"> <span class="glyphicon glyphicon-flag"></span> About the University</h3>
 		<ul class="list-group">
 			<li class="list-group-item">
 				<h4 class="name"><a href="http://www.postech.ac.kr/eng/" target="_blank">POSTECH</a> is young, small, and strong university in <a href="https://en.wikipedia.org/wiki/South_Korea" target="_blank">Republic of Korea</a></h4>
