--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
+						2020.09. A <b>postdoc</b> position is available. Please send your CV for more information. (deadline Sep. 25, 2020 in KST)
+					</li>
+					<li class="list-group-item">
 						2020.07. I will serve as an Area Chair for <b>CVPR 2021</b>.
 					</li>
 					<li class="list-group-item">
