--- a/publications.html
+++ b/publications.html
@@ -111,12 +111,12 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/data/20_arxiv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<img src="publications/data/20_neurips.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Contrastive Generative Adversarial Networks</h3>
 		<p>Minguk Kang and Jaesik Park<br>
-		arXiv:2006.12681, 2020<br>
+		Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2020<br>
 		</p>
 		<a href="https://arxiv.org/abs/2006.12681" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
