--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						2020.09. A <b>postdoc</b> position is available. Please send your CV for more information. (deadline Sep. 25, 2020 in KST)
+						2020.09. A paper about conditional image generation is accepted to <b>NeurIPS 2020</b>
+					</li>
+					<li class="list-group-item">
+						2020.09. A <b>postdoc</b> position is available. Please send your CV for more information. (deadline Oct. 14, 2020 in KST)
 					</li>
 					<li class="list-group-item">
 						2020.07. I will serve as an Area Chair for <b>CVPR 2021</b>.
@@ -101,12 +104,6 @@
 					<li class="list-group-item">
 						2020.03. Three papers got accepted to <b>CVPR 2020</b>.
 					</li>
-					<li class="list-group-item">
-						2020.02. I will visit San Diego to attend CVPR 2020 AC meeting.
-					</li>
-					<li class="list-group-item">
-						2019.09. We are releasing source code of FCGF via <a href="https://github.com/chrischoy/fcgf">Github</a>.
-					</li>
 					<div id="accordion">
 						<div class="card">
 							<div class="card-header" id="heading-previous-news">
@@ -118,6 +115,12 @@
 								</h5>
 							</div>
 							<div id="collapse-previous-news" class="collapse" aria-labelledby="heading-previous-news" data-parent="#accordion">
+								<li class="list-group-item">
+									2020.02. I will visit San Diego to attend CVPR 2020 AC meeting.
+								</li>
+								<li class="list-group-item">
+									2019.09. We are releasing source code of FCGF via <a href="https://github.com/chrischoy/fcgf">Github</a>.
+								</li>
 								<li class="list-group-item">
 									2019.08. I will serve as an Session Chair for <b>ICCV 2019</b>.
 								</li>
