--- a/publications.html
+++ b/publications.html
@@ -114,9 +114,9 @@
 		<img src="publications/data/20_arxiv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
-		<h3>Contrastive Generative Adversarial Networks</h3>
+		<h3>ContraGAN: Contrastive Learning for Conditional Image Generation</h3>
 		<p>Minguk Kang and Jaesik Park<br>
-		arXiv:2006.12681, 2020<br>
+		Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2020<br>
 		</p>
 		<a href="https://arxiv.org/abs/2006.12681" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
