--- a/publications.html
+++ b/publications.html
@@ -111,6 +111,25 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/20_arxiv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Combinatorial 3D Shape Generation via Sequential Assembly</h3>
+		<p>Jungtaek Kim, Hyunsoo Chung, Minsu Cho, and Jaesik Park<br>
+		arXiv:2004.07414, 2020<br>
+		</p>
+		<a href="https://arxiv.org/abs/2004.07414" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/20_neurips.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
