--- a/publications.html
+++ b/publications.html
@@ -116,7 +116,7 @@
 	<div class="col-lg-7">
 		<h3>Combinatorial 3D Shape Generation via Sequential Assembly</h3>
 		<p>Jungtaek Kim, Hyunsoo Chung, Minsu Cho, and Jaesik Park<br>
-		arXiv:2004.07414, 2020<br>
+		<b>NeurIPS</b> workshop (ML4ENG)<br>
 		</p>
 		<a href="https://arxiv.org/abs/2004.07414" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
