--- a/publications.html
+++ b/publications.html
@@ -103,6 +103,31 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-12 text-left">
+		<h2 class="name">2021</h2>
+	</div>
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_wacv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>High-quality Frame Interpolation via Tridirectional Inference</h3>
+		<p>Jinsoo Choi, Jaesik Park, and In So Kweon<br>
+		Winter Conference on Applications of Computer Vision, (<b>WACV</b>), 2021<br>
+		</p>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<hr>
+<div class="container">
+<div class="row">
+	<div class="col-lg-12 text-left">
 		<h2 class="name">2020</h2>
 	</div>
 </div>
@@ -114,9 +139,25 @@
 		<img src="publications/data/20_arxiv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
+		<h3>Fragment Relation Networks for Geometric Shape Assembly</h3>
+		<p>Jinhwi Lee, Jungtaek Kim, Hyunsoo Chung, Jaesik Park, and Minsu Cho<br>
+		Learning Meets Combinatorial Algorithms (LMCA), (<b>NeurIPS workshop</b>), 2020<br>
+		</p>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/20_arxiv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
 		<h3>Combinatorial 3D Shape Generation via Sequential Assembly</h3>
 		<p>Jungtaek Kim, Hyunsoo Chung, Minsu Cho, and Jaesik Park<br>
-		<b>NeurIPS</b> workshop (ML4ENG)<br>
+		Machine Learning for Engineering Modeling, Simulation, and Design (ML4Eng), (<b>NeurIPS workshop</b>), 2020<br>
 		</p>
 		<a href="https://arxiv.org/abs/2004.07414" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
