--- a/publications.html
+++ b/publications.html
@@ -116,7 +116,7 @@
 	<div class="col-lg-7">
 		<h3>High-quality Frame Interpolation via Tridirectional Inference</h3>
 		<p>Jinsoo Choi, Jaesik Park, and In So Kweon<br>
-		Winter Conference on Applications of Computer Vision, (<b>WACV</b>), 2021<br>
+		Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021<br>
 		</p>
 	</div>
 </div>
@@ -141,7 +141,7 @@
 	<div class="col-lg-7">
 		<h3>Combinatorial 3D Shape Generation via Sequential Assembly</h3>
 		<p>Jungtaek Kim, Hyunsoo Chung, Minsu Cho, and Jaesik Park<br>
-		Machine Learning for Engineering Modeling, Simulation, and Design (ML4Eng), (<b>NeurIPS workshop</b>), 2020<br>
+		Machine Learning for Engineering Modeling, Simulation, and Design (ML4Eng, <b>NeurIPS workshop</b>), 2020<br>
 		</p>
 		<a href="https://arxiv.org/abs/2004.07414" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
