--- a/lab.html
+++ b/lab.html
@@ -160,6 +160,9 @@
 		<h3 class="name"> <span class="glyphicon glyphicon-blackboard"></span> Teaching</h3>
 		<ul class="list-group">
 			<li class="list-group-item">
+				<h4>2021 Spring</h4>
+				[AIGS101] Artifical Intelligence Basis I*<br>
+				[CSED538] Deep learning<br>
 				<h4>2020 Fall</h4>
 				[AIGS101] Artifical Intelligence Basis II*<br>
 				[CSED100] Introduction to Computer Science Engineering*<br>
