--- a/lab.html
+++ b/lab.html
@@ -153,6 +153,18 @@
 			2020 Fall<br>
 			Master's course<br><br>
 		</div>
+		<div class="col-xs-3 text-center">
+			<img src="source/images/jiye.jpeg" class="img-responsive img-circle img-thumbnail">
+			<h4>Ji Ye Kim</h4>
+			2021 Spring<br>
+			Master's course<br><br>
+		</div>
+		<div class="col-xs-3 text-center">
+			<img src="source/images/ganghee.jpeg" class="img-responsive img-circle img-thumbnail">
+			<h4>Ganghee Lee</h4>
+			2021 Spring<br>
+			Master's course<br><br>
+		</div>
 	</div>
 </div>
 <div class="container">
