--- a/publications.html
+++ b/publications.html
@@ -136,6 +136,28 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/20_neurips.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>ContraGAN: Contrastive Learning for Conditional Image Generation</h3>
+		<p>Minguk Kang and Jaesik Park<br>
+		Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2020<br>
+		</p>
+		<a href="https://arxiv.org/abs/2006.12681" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/20_arxiv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
@@ -155,19 +177,13 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/data/20_neurips.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<img src="publications/data/20_lmca.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
-		<h3>ContraGAN: Contrastive Learning for Conditional Image Generation</h3>
-		<p>Minguk Kang and Jaesik Park<br>
-		Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2020<br>
-		</p>
-		<a href="https://arxiv.org/abs/2006.12681" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-file"></span> Paper
-		</a>
-		<a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-pencil"></span> Code
-		</a>
+		<h3>Fragment Relation Networks for Geometric Shape Assembly</h3>
+		<p>Jinhwi Lee*, Jungtaek Kim*, Hyunsoo Chung, Jaesik Park, Minsu Cho<br>
+		Learning Meets Combinatorial Algorithms (LMCA, <b>NeurIPS workshop</b>), 2020<br>
+		*Equal contribution</p>
 	</div>
 </div>
 <div class="row" style="height: 30px">
