--- a/lab.html
+++ b/lab.html
@@ -112,58 +112,64 @@
 	<div class="col-lg-12 text-left">
 		<h3 class="name"> <span class="glyphicon glyphicon-user"></span> Graduate Students</h3>
 		<div class="col-xs-3 text-center">
+			<img src="source/images/kwon-young.jpg" class="img-responsive img-circle img-thumbnail">
+			<h4>Kwon-young Ryu</h4>
+			2021 Spring<br>
+			Ph.D. student<br><br>
+		</div>
+		<div class="col-xs-3 text-center">
 			<img src="source/images/junha.jpg" class="img-responsive img-circle img-thumbnail">
 			<h4>Junha Lee</h4>
 			2019 Fall<br>
-			Master's course<br><br>
+			Master student<br><br>
 		</div>
 		<div class="col-xs-3 text-center">
 			<img src="source/images/hyunmin.jpg" class="img-responsive img-circle img-thumbnail">
 			<h4>Hyunmin Lee</h4>
 			2019 Fall<br>
-			Master's course<br><br>
+			Master student<br><br>
 		</div>
 		<div class="col-xs-3 text-center">
 			<img src="source/images/jaebong.jpg" class="img-responsive img-circle img-thumbnail">
 			<h4>Jaebong Jeong</h4>
 			2019 Fall<br>
-			Master's course<br><br>
+			Master student<br><br>
 		</div>
 		<div class="col-xs-3 text-center">
 			<img src="source/images/minguk.jpg" class="img-responsive img-circle img-thumbnail">
 			<h4>MinGuk Kang</h4>
 			2020 Spring<br>
-			Master's course<br><br>
+			Master student<br><br>
 		</div>
 		<div class="col-xs-3 text-center">
 			<img src="source/images/chunghyun.jpg" class="img-responsive img-circle img-thumbnail">
 			<h4>Chunghyun Park</h4>
 			2020 Spring<br>
-			Master's course<br><br>
+			Master student<br><br>
 		</div>
 		<div class="col-xs-3 text-center">
 			<img src="source/images/jinoh.jpg" class="img-responsive img-circle img-thumbnail">
 			<h4>Jin-Oh Cho</h4>
 			2020 Fall<br>
-			Master's course<br><br>
+			Master student<br><br>
 		</div>
 		<div class="col-xs-3 text-center">
 			<img src="source/images/seokjun.jpg" class="img-responsive img-circle img-thumbnail">
 			<h4>Seokjun Ahn</h4>
 			2020 Fall<br>
-			Master's course<br><br>
+			Master student<br><br>
 		</div>
 		<div class="col-xs-3 text-center">
 			<img src="source/images/jiye.jpeg" class="img-responsive img-circle img-thumbnail">
 			<h4>Ji Ye Kim</h4>
 			2021 Spring<br>
-			Master's course<br><br>
+			Master student<br><br>
 		</div>
 		<div class="col-xs-3 text-center">
 			<img src="source/images/ganghee.jpeg" class="img-responsive img-circle img-thumbnail">
 			<h4>Ganghee Lee</h4>
 			2021 Spring<br>
-			Master's course<br><br>
+			Master student<br><br>
 		</div>
 	</div>
 </div>
