--- a/lab.html
+++ b/lab.html
@@ -113,7 +113,7 @@
 		<h3 class="name"> <span class="glyphicon glyphicon-user"></span> Graduate Students</h3>
 		<div class="col-xs-3 text-center">
 			<img src="source/images/kwon-young.jpg" class="img-responsive img-circle img-thumbnail">
-			<h4>Kwon-young Ryu</h4>
+			<h4>Kwon-Young Ryu</h4>
 			2021 Spring<br>
 			Ph.D. student<br><br>
 		</div>
