--- a/source/academic_activities.html
+++ b/source/academic_activities.html
@@ -4,6 +4,7 @@
 		<h2> <span class="glyphicon glyphicon-globe"></span>  Program Committee</h2>
 		<ul class="list-group">
 			<li class="list-group-item">
+				<mark>Senior Program Committee</mark>, Int. Joint Conf. on Artificial Intelligence (IJCAI), 2021<br>
 				<mark>Senior Program Committee</mark>, American Assoc. for Artificial Intelligence (AAAI), 2021<br>
 				<mark>Area Chair</mark>, Int. Conf. on Computer Vision and Pattern Recognition (CVPR), 2021<br>
 				<mark>Area Chair</mark>, Int. Conf. on Computer Vision and Pattern Recognition (CVPR), 2020<br>
