--- a/lab.html
+++ b/lab.html
@@ -180,7 +180,7 @@
 			<li class="list-group-item">
 				<h4>2021 Spring</h4>
 				[AIGS101] Artifical Intelligence Basis I*<br>
-				[CSED538] Deep learning<br>
+				[CSED538/AIGS538] Deep learning<br>
 				<h4>2020 Fall</h4>
 				[AIGS101] Artifical Intelligence Basis II*<br>
 				[CSED100] Introduction to Computer Science Engineering*<br>
