--- a/publications.html
+++ b/publications.html
@@ -184,6 +184,9 @@
 		<p>Jinhwi Lee*, Jungtaek Kim*, Hyunsoo Chung, Jaesik Park, Minsu Cho<br>
 		Learning Meets Combinatorial Algorithms (LMCA, <b>NeurIPS workshop</b>), 2020<br>
 		*Equal contribution</p>
+		<a href="https://openreview.net/pdf?id=05KxJSXwPl" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
