--- a/publications.html
+++ b/publications.html
@@ -118,6 +118,9 @@
 		<p>Jinsoo Choi, Jaesik Park, and In So Kweon<br>
 		Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021<br>
 		</p>
+		<a href="https://openaccess.thecvf.com/content/WACV2021/papers/Choi_High-Quality_Frame_Interpolation_via_Tridirectional_Inference_WACV_2021_paper.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
