--- a/lab.html
+++ b/lab.html
@@ -92,7 +92,7 @@
 		<h3 class="name"> <span class="glyphicon glyphicon-flag"></span> About the University</h3>
 		<ul class="list-group">
 			<li class="list-group-item">
-				<h4 class="name"><a href="http://www.postech.ac.kr/eng/" target="_blank">POSTECH</a> is young, small, and strong university in <a href="https://en.wikipedia.org/wiki/South_Korea" target="_blank">Republic of Korea</a></h4>
+				<h4 class="name"><a href="https://en.wikipedia.org/wiki/Pohang_University_of_Science_and_Technology" target="_blank">POSTECH</a> is young, small, and strong university in <a href="https://en.wikipedia.org/wiki/South_Korea" target="_blank">Republic of Korea</a></h4>
 				- 3.3 to 1 Undergraduate students per faculty<br>
 				- 105% Scholarship recipient rate<br>
 				- Annual educational expenditures of USD 74,900 per student
