--- a/publications.html
+++ b/publications.html
@@ -121,6 +121,9 @@
 		<a href="https://openaccess.thecvf.com/content/WACV2021/papers/Choi_High-Quality_Frame_Interpolation_via_Tridirectional_Inference_WACV_2021_paper.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
+		<a href="https://github.com/POSTECH-CVLab/HighQualityFrameInterpolation" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
