--- a/publications.html
+++ b/publications.html
@@ -174,6 +174,9 @@
 		<a href="https://arxiv.org/abs/2004.07414" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
+		<a href="https://github.com/POSTECH-CVLab/Combinatorial-3D-Shape-Generation" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
