cvpr code release

--- a/publications.html
+++ b/publications.html
@@ -265,6 +265,9 @@
 		<a href="https://www.youtube.com/watch?v=3zGXWuMLQ5o" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-play"></span> Video
 		</a>
+		<a href="https://github.com/YueWuHKUST/FutureVideoSynthesis" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
