update contragan pdf link

--- a/publications.html
+++ b/publications.html
@@ -149,7 +149,7 @@
 		<p>Minguk Kang and Jaesik Park<br>
 		Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2020<br>
 		</p>
-		<a href="https://arxiv.org/abs/2006.12681" target="_blank" class="btn btn-default" role="button">
+		<a href="https://papers.nips.cc/paper/2020/file/f490c742cd8318b8ee6dca10af2a163f-Paper.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 		<a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" target="_blank" class="btn btn-default" role="button">
